@@ -281,7 +281,7 @@ In this case the mask value at a given point is computed from the color channel 
     </li>
     <li>Then, using non-premultiplied RGB color values, apply the
     luminance-to-alpha coefficients (as defined in the <a>'feColorMatrix'</a>
-    filter primitive [[!FILTER-EFFECTS]]) to convert the RGB color values to luminance
+    filter primitive [[!SVG11]]) to convert the RGB color values to luminance
     values.
     </li>
   </ul>
@@ -1803,7 +1803,7 @@ Values have the following meanings:
   </tr>
   <tr>
     <th>Computed value:</th>
-    <td>as specified, but with <a>&lt;FuncIRI&gt;</a> values made absolute</td>
+    <td>as specified, but with <var>&lt;url&gt;</var> values made absolute</td>
   </tr>
   <tr>
     <th>Animatable:</th>
@@ -1811,7 +1811,7 @@ Values have the following meanings:
   </tr>
 </table>
 
-<pre class=prod><dfn>&lt;clip-source&gt;</dfn> = <var>&lt;FuncIRI&gt;</var> | <var>child</var> | <var>&lt;child-selector&gt;</var></pre>
+<pre class=prod><dfn>&lt;clip-source&gt;</dfn> = <var>&lt;url&gt;</var> | <var>child</var> | <var>&lt;child-selector&gt;</var></pre>
 
 <dl>
   <dt>
