@@ -512,9 +512,8 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
       class=element-name
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/filters.html#feColorMatrixElement">‘<code
       class=property>feColorMatrix</code>’</a> filter primitive <a
-      href="#FILTER-EFFECTS"
-      rel=biblioentry>[FILTER-EFFECTS]<!--{{!FILTER-EFFECTS}}--></a>) to
-      convert the RGB color values to luminance values.
+      href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>) to convert
+      the RGB color values to luminance values.
     </ul>
 
    <li>Multiply the computed luminance value by the corresponding alpha value
@@ -2949,8 +2948,7 @@ div {
     <tr>
      <th>Computed value:
 
-     <td>as specified, but with <a
-      href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#DataTypeFuncIRI">&lt;FuncIRI&gt;</a>
+     <td>as specified, but with <a href="#lturlgt"><var>&lt;url&gt;</var></a>
       values made absolute
 
     <tr>
@@ -2959,8 +2957,8 @@ div {
      <td>yes
   </table>
 
-  <pre class=prod><dfn
-   id=ltclip-sourcegt>&lt;clip-source&gt;</dfn> = <var>&lt;FuncIRI&gt;</var> | <a
+  <pre class=prod><dfn id=ltclip-sourcegt>&lt;clip-source&gt;</dfn> = <a
+   href="#lturlgt"><var>&lt;url&gt;</var></a> | <a
    href="#child"><var>child</var></a> | <a
    href="#ltchild-selectorgt0"><var>&lt;child-selector&gt;</var></a></pre>
 
@@ -3731,13 +3729,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     href="http://www.w3.org/TR/2012/WD-dom-20120405/"><cite>DOM4.</cite></a>
     5 April 2012. W3C Working Draft. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/WD-dom-20120405/">http://www.w3.org/TR/2012/WD-dom-20120405/</a>
-   </dd>
-   <!---->
-
-   <dt id=FILTER-EFFECTS>[FILTER-EFFECTS]
-
-   <dd>Vincent Hardy; Dean Jackson; Erik Dahlström. <cite>Filter
-    Effects 1.0.</cite> (forthcoming). W3C Working Draft. (Work in progress)
    </dd>
    <!---->
 
