@@ -1,3 +1,8 @@
+2012-10-11 dschulze@adobe.com
+	Replace all FuncIRI references by url.
+	Remove normative reference to Filter Effects and just use SVG 1.1.
+	Fixed typos.
+
 2012-10-10 dschulze@adobe.com
 	Added 'clip' property from CSS 2.1.
 	Fixed typos.
